--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,71 @@
-@import './base.css';
+@import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css);
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+
+:root {
+  --background-color-white-gray: rgba(33, 37, 41, 0.03);
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+
+.table-container {
+  margin-bottom: 0.5rem;
+  background-color: var(--background-color-white-gray);
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+.table-data-container {
+  overflow-y: auto;
+  display: block;
+  max-height: 30rem;
+  margin-bottom: 1rem;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+.table-embedded {
+  margin-bottom: 0rem;
+  margin-top: 0rem;
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.select-container {
+  margin-top: 0rem;
+  margin-bottom: 1rem;
+}
+
+.header-background {
+  background-color: var(--background-color-white-gray);
+  padding: 1rem;
+}
+
+.search-bar-holder {
+  margin-bottom: 1rem;
+}
+
+.filial-card-holder {
+  margin-bottom: 1rem;
+}
+
+.info-card {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.map-collapse {
+  margin-top: 0.5rem;
+  max-width: 100%;
+  height: 17rem;
+}
+
+.map-card {
+  height: 100%;
+  width: 100%;
+}
+
+.map-rectangle {
+  width: 100%;
+  height: 25rem;
+}
+
+.rounded-start-top {
+  border-top-left-radius: var(--bs-border-radius)!important;
+}
+
+.card-text-holder {
+  margin-bottom: var(--bs-card-spacer-y);
 }
