--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -69,3 +69,13 @@
 .card-text-holder {
   margin-bottom: var(--bs-card-spacer-y);
 }
+
+.v-enter-active,
+.v-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.v-enter-from,
+.v-leave-to {
+  opacity: 0;
+}
